ChangeLog for herdstat

2005-03-27 Aaron Walker <ka0ttic@gentoo.org>

	* src/util.hh: Renamed status_T to progress_T. Modified it to not
	print leading zeros.
	* src/metadatas.cc, src/metadatas.hh: Moved metadata.xml retrieval
	code from action_pkg_handler.cc into it's own class.
	* src/action_pkg_handler.cc: Moved metadata.xml retrieval code to
	metadatas.{cc,hh}.  Also reworked the way we handle invalid
	devs/herds.

2005-03-26 Aaron Walker <ka0ttic@gentoo.org>
	
	* configure.ac: Update version (1.0-release).
	* src/util.hh: Added status_T class for showing percent of task
	completion.
	* src/action_pkg_handler.cc: Use util::status_T for metadata caching
	and parsing.

2005-03-25 Aaron Walker <ka0ttic@gentoo.org>

	* src/util.cc: Use C++ version of std::isspace and std::tolower with
	locale.

2005-03-24 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.0_rc2-release).
	* src/action_pkg_handler.cc: Modified get_metadatas() to cache the
	list of metadata.xml's for 24hrs; This should make subsequent queries
	a lot faster.
	* src/herds_xml_handler.cc, src/metadata_xml_handler.cc, src/herds.cc,
	src/devs.hh, src/action_pkg_handler.cc: Call util::tidy_whitespace()
	for only the data shown, not ALL data when filling the containers.
	This should make a slight dent in elapsed runtime.
	* src/formatter.cc: Added a sleu of debug_msg calls to aid in
	debugging. Fixed formatting bug causing some lines to not wrap and
	indent properly.

2005-03-23 Aaron Walker <ka0ttic@gentoo.org>

	* src/herdstat.cc: Add formatter_T::set_highlightcolor() and
	formatter_T::add_highlight() calls.  Removed unnecessary remove_if()
	call.
	* src/herds.cc: Remove highlighting stuff since we do it in main()
	now.
	* src/action_stats_handler.cc, src/action_herd_handler.cc,
	src/action_pkg_handler.cc, src/action_dev_handler.cc, src/util.cc:
	s/size_t/std::size_t/.
	* src/action_pkg_handler.cc: Fix small formatting issue (errant \n).

2005-03-22 Aaron Walker <ka0ttic@gentoo.org>
